# OpenGLGame

./: .gitignore  CMakeLists.txt  README.md
include/: Mesh.h  Model.h  camera.h  shader.h
include/glad/: glad.h
model/boxguy/: boxguy.blend  boxguy.blend1  boxguy_no_armature.blend  boxguy_no_armature.blend1
model/boxguy/export/: boxguy.dae  boxguy.fbx  boxguy.mtl
model/dragon/: BGE_Dragon_2.5_Blender_Game_Engine.mtl
src/: glad.c  openglGame.cpp
src/shaders/: basic_frag.glsl  basic_vert.glsl  depth_vert.glsl  lighting_frag.glsl  lighting_vert.glsl  screen_frag.glsl  screen_vert.glsl
